--- a/block-BJaajt/code/index.html
+++ b/block-BJaajt/code/index.html
@@ -5,8 +5,66 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fetch Data</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    
+    <header>Github User Finder</header>
+
+    <div class="container">
+        <div class="flex">
+            <input type="text" placeholder="Enter username">
+        <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="">
+        <h2>Arya Stark</h2>
+        <p>@arya</p>
+    </div>
+
+    <div class="details">
+        <p>Followers:</p>
+        <ul class="followers">
+            <li>
+                <img src="https://images.unsplash.com/photo-1593643946890-b5b85ade6451?ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwxfHx8ZW58MHx8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="">
+            </li>
+
+            <li>
+                <img src="https://images.unsplash.com/photo-1593643946890-b5b85ade6451?ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwxfHx8ZW58MHx8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="">
+            </li>
+
+            <li>
+                <img src="https://images.unsplash.com/photo-1593643946890-b5b85ade6451?ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwxfHx8ZW58MHx8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="">
+            </li>
+        </ul>
+    </div>
+
+    <div class="details">
+        <p>Following:</p>
+        <ul class="following">
+            <li>
+                <img src="https://images.unsplash.com/photo-1593643946890-b5b85ade6451?ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwxfHx8ZW58MHx8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="">
+            </li>
+
+            <li>
+                <img src="https://images.unsplash.com/photo-1593643946890-b5b85ade6451?ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwxfHx8ZW58MHx8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="">
+            </li>
+
+            <li>
+                <img src="https://images.unsplash.com/photo-1593643946890-b5b85ade6451?ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwxfHx8ZW58MHx8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="">
+            </li>
+        </ul>
+    </div>
+
+    <hr>
+
+
+    <div class="flex-cat">
+       
+   
+    <h2>Get Random cat</h2>
+    <img src="https://images.unsplash.com/photo-1618850603963-ad2b2a8dca47?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMnx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="">
+    <button>Get New cat</button>
+</div>
+
+
+    </div>
+    <script src="./index.js"></script>
 </body>
 </html>
