--- a/block-BJaajw/code/index.html
+++ b/block-BJaajw/code/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Error handling</title>
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
     <header class=""><strong>Space News Everywhere</strong></header>
     <main>
+        <div class="error"></div>
       <section class="main-sec container">
         <div class="select-div flex jcc">
           <select name="agency" id="newsAgency">
