--- a/block-BJaakg/code/index.html
+++ b/block-BJaakg/code/index.html
@@ -14,7 +14,7 @@
          <article class="flex-30">
              <h2>A Game of Throne</h2>
              <p>George R.R. Martin</p>
-             <button>Show characters</button>
+             <button class="btn">Show characters</button>
 
          </article>
 
@@ -49,6 +49,25 @@
         </article>-->
 
      </div>
+
+
+     <div class="modal-window">
+        <div>
+            <span class="modal-close">Close</span>
+        <h1>Character List</h1>
+        <ul class="characters">
+           <li>walder</li>
+           <li>walder</li>
+           <li>walder</li>
+        </ul>
+        </div>
+     </div>
+     
+
+
+
+
+    
     <script src="./index.js"></script>
 </body>
 </html>
